[project]
name = "rag-document-seach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.12.0",
    "huggingface>=0.0.1",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "pydantic>=2.12.3",
    "pypdf>=6.1.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "wikipedia>=1.4.0",
]
