[project]
name = "rag-document-seach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "bs4>=0.0.2",
    "faiss-cpu>=1.12.0",
    "huggingface>=0.0.1",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-llms-ollama>=0.9.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20251107",
    "pi-heif>=1.1.1",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.6",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "unstructured>=0.18.21",
    "unstructured-inference>=1.1.2",
    "unstructured-pytesseract>=0.3.15",
    "wikipedia>=1.4.0",
]
